Fixing portfolio img sizing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,10 @@ p.head-Text {
 	width: 80%;
 }
 
+.portImg {
+	width: 90%;
+}
+
 
 
 li {
